// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoviesSection tests MoviesSection render MoviesSection renders correctly when modal window open 1`] = `
<section
  className="container"
>
  <div
    className="container"
  >
    <div
      className="message"
    >
      Trailer not found
    </div>
    <button
      className="close"
      onClick={
        [MockFunction] {
          "calls": Array [
            Array [
              "Trending",
              null,
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      type="button"
    >
      ×
    </button>
  </div>
  <div
    className="container"
  >
    <a
      href="/?filter=Trending"
      onClick={[Function]}
    >
      <button
        className="tab active"
        data-filter="Trending"
        onClick={[Function]}
        type="button"
      >
        Trending
      </button>
    </a>
    <a
      href="/?filter=Top Rated"
      onClick={[Function]}
    >
      <button
        className="tab"
        data-filter="Top Rated"
        onClick={[Function]}
        type="button"
      >
        Top Rated
      </button>
    </a>
    <a
      href="/?filter=Coming soon"
      onClick={[Function]}
    >
      <button
        className="tab"
        data-filter="Coming soon"
        onClick={[Function]}
        type="button"
      >
        Coming soon
      </button>
    </a>
    <select
      className="select"
      defaultValue="Genre"
      name="Genre"
      onChange={[Function]}
    >
      <option
        disabled={true}
        hidden={true}
        value="Genre"
      >
        Genre
      </option>
      <option
        value={0}
      >
        crime
      </option>
      <option
        value={1}
      >
        actions
      </option>
    </select>
  </div>
  <div
    className="container"
  >
    <div
      className="container"
    >
      <div
        className="preview"
      >
        <img
          alt="poster"
          className="poster"
        />
        <a
          href="/details/123"
          name="link"
          onClick={[Function]}
        >
          <div
            className="info"
          >
            <h3
              className="title"
            >
              title
            </h3>
            <p
              className="rating"
            />
            <p
              className="genres"
            />
          </div>
        </a>
      </div>
      <div
        className="container"
      >
        <button
          className="watch"
          onClick={[Function]}
          type="button"
        >
          ►
        </button>
        <p>
          Watch Now
        </p>
        <button
          className="button secondary"
          onClick={[Function]}
          type="button"
        >
          View Info
        </button>
      </div>
    </div>
  </div>
</section>
`;

exports[`MoviesSection tests MoviesSection render MoviesSection renders correctly when movies is loading 1`] = `
<div
  className="container"
>
  <div
    className="container"
  >
    <a
      href="/?filter=Trending"
      onClick={[Function]}
    >
      <button
        className="tab active"
        data-filter="Trending"
        onClick={[Function]}
        type="button"
      >
        Trending
      </button>
    </a>
    <a
      href="/?filter=Top Rated"
      onClick={[Function]}
    >
      <button
        className="tab"
        data-filter="Top Rated"
        onClick={[Function]}
        type="button"
      >
        Top Rated
      </button>
    </a>
    <a
      href="/?filter=Coming soon"
      onClick={[Function]}
    >
      <button
        className="tab"
        data-filter="Coming soon"
        onClick={[Function]}
        type="button"
      >
        Coming soon
      </button>
    </a>
    <select
      className="select"
      defaultValue="Genre"
      name="Genre"
      onChange={[Function]}
    >
      <option
        disabled={true}
        hidden={true}
        value="Genre"
      >
        Genre
      </option>
    </select>
  </div>
  <div
    className="container"
  >
    <div
      className="ldsSpinner"
    >
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
    </div>
  </div>
</div>
`;

exports[`MoviesSection tests MoviesSection render MoviesSection renders correctly with closed modal window 1`] = `
<section
  className="container"
>
  <div
    className="container"
  >
    <a
      href="/?filter=Trending"
      onClick={[Function]}
    >
      <button
        className="tab active"
        data-filter="Trending"
        onClick={[Function]}
        type="button"
      >
        Trending
      </button>
    </a>
    <a
      href="/?filter=Top Rated"
      onClick={[Function]}
    >
      <button
        className="tab"
        data-filter="Top Rated"
        onClick={[Function]}
        type="button"
      >
        Top Rated
      </button>
    </a>
    <a
      href="/?filter=Coming soon"
      onClick={[Function]}
    >
      <button
        className="tab"
        data-filter="Coming soon"
        onClick={[Function]}
        type="button"
      >
        Coming soon
      </button>
    </a>
    <select
      className="select"
      defaultValue="Genre"
      name="Genre"
      onChange={[Function]}
    >
      <option
        disabled={true}
        hidden={true}
        value="Genre"
      >
        Genre
      </option>
      <option
        value={0}
      >
        crime
      </option>
      <option
        value={1}
      >
        actions
      </option>
    </select>
  </div>
  <div
    className="container"
  >
    <div
      className="container"
    >
      <div
        className="preview"
      >
        <img
          alt="poster"
          className="poster"
        />
        <a
          href="/details/123"
          name="link"
          onClick={[Function]}
        >
          <div
            className="info"
          >
            <h3
              className="title"
            >
              title
            </h3>
            <p
              className="rating"
            />
            <p
              className="genres"
            />
          </div>
        </a>
      </div>
      <div
        className="container"
      >
        <button
          className="watch"
          onClick={[Function]}
          type="button"
        >
          ►
        </button>
        <p>
          Watch Now
        </p>
        <button
          className="button secondary"
          onClick={[Function]}
          type="button"
        >
          View Info
        </button>
      </div>
    </div>
  </div>
</section>
`;

exports[`MoviesSection tests MoviesSection render MoviesSection renders correctly with error message 1`] = `
<div
  className="container"
>
  Error! error
</div>
`;
